# inspirobot

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
src/: constants.py
tests/: test_inspirobot.py
