[project]
name = "inspirobot"
version = "0.1.0"
description = "Add a short description here"
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
inspirobot = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.3,<2.33"
pygame = ">=2.6.0,<2.7"
pytest = ">=8.3.2,<8.4"
